--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,45 @@ label {
 
 .board-item.completed {
   /* Add styles for completed items */
-  background-color: rgb(156, 144, 238); /* Green background for completed items */
+  background-color: rgb(166, 247, 197); /* Green background for completed items */
 }
 
 .board-item.not-completed {
   /* Add styles for not completed items */
-  background-color: rgb(241, 134, 134); /* Red background for not completed items */
+  background-color: rgb(239, 155, 155); /* Red background for not completed items */
+}
+
+
+/* WobblingImage.css */
+.image-container {
+  width: 100%;
+  max-width: 500px; /* Set a maximum width for the image if needed */
+  margin: 0 auto; /* Center the container */
+  padding: 20px; /* Add padding around the image */
+  box-sizing: border-box; /* Include padding in total width */
+  text-align: center; /* Center the image horizontally */
+}
+
+.image-container img {
+  max-width: 100%; /* Make sure the image doesn't exceed the container width */
+  height: auto; /* Maintain aspect ratio */
+  animation: wobble 0.3s infinite;
+}
+
+@keyframes wobble {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(-10deg);
+  }
+  75% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
